Update the code to run/train against the BCE.

--- a/configs/emotions/TimeSformer_divST_8x32_224_4gpus.yaml
+++ b/configs/emotions/TimeSformer_divST_8x32_224_4gpus.yaml
@@ -1,7 +1,7 @@
 TRAIN:
   ENABLE: True
   DATASET: emotions_vce
-  BATCH_SIZE: 56
+  BATCH_SIZE: 32
   EVAL_PERIOD: 5
   CHECKPOINT_PERIOD: 5
   AUTO_RESUME: True
@@ -30,16 +30,16 @@ MODEL:
   MODEL_NAME: vit_base_patch16_224
   NUM_CLASSES: 27
   ARCH: vit
-  LOSS_FUNC: cross_entropy
+  LOSS_FUNC: bce_logit
   DROPOUT_RATE: 0.5
 TEST:
   ENABLE: True
   DATASET: emotions_vce
   BATCH_SIZE: 4
   NUM_ENSEMBLE_VIEWS: 1
-  NUM_SPATIAL_CROPS: 3
+  NUM_SPATIAL_CROPS: 1
 DATA_LOADER:
-  NUM_WORKERS: 4
+  NUM_WORKERS: 2
   PIN_MEMORY: True
 NUM_GPUS: 4
 NUM_SHARDS: 1
