--- a/configs/emotions/v2v_pairwise_TimeSformer_divST_8x32_224_4gpus.yaml
+++ b/configs/emotions/v2v_pairwise_TimeSformer_divST_8x32_224_4gpus.yaml
@@ -1,5 +1,5 @@
 TRAIN:
-  ENABLE: True
+  ENABLE: False
   DATASET: emotions_v2v
   BATCH_SIZE: 28
   EVAL_PERIOD: 5
@@ -35,7 +35,7 @@ MODEL:
 TEST:
   ENABLE: True
   DATASET: emotions_v2v
-  BATCH_SIZE: 21
+  BATCH_SIZE: 7
   NUM_ENSEMBLE_VIEWS: 1
   NUM_SPATIAL_CROPS: 3
 DATA_LOADER:
